<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/p_4"
        tools:context=".presentation.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcomePageTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/highlight_title_black"
            android:text="@string/welcome_TV_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomePageDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/highlight_subtitle_black"
            android:layout_marginTop="@dimen/m_4"
            android:text="@string/welcome_description_TV_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomePageTitleTV" />

        <Button
            android:id="@+id/instructionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_instruction_BTN_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
