<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoesNameLabelTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/list_item_name"
                android:layout_weight="3"
                android:text="@string/name_TV_label" />

            <TextView
                android:id="@+id/shoesNameTV"
                android:layout_width="0dp"
                style="@style/list_item_others"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/shoesCompanyLabelTV"
                android:layout_width="0dp"
                style="@style/list_item_name"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/company_TV_label" />

            <TextView
                android:id="@+id/shoesCompanyTV"
                android:layout_width="0dp"
                style="@style/list_item_others"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoesSizeLabelTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/list_item_name"
                android:layout_weight="3"
                android:text="@string/size_TV_label" />

            <TextView
                android:id="@+id/shoesSizeTV"
                android:layout_width="0dp"
                style="@style/list_item_others"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/shoesDescriptionLabelTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/list_item_name"
                android:layout_weight="3"
                android:text="@string/description_TV_label" />

            <TextView
                android:id="@+id/shoesDescriptionTV"
                android:layout_width="0dp"
                style="@style/list_item_others"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

</layout>
