<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/shoesListTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/highlight_title_black"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:text="@string/shoes_list_TV_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/base_layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/addNewShoesDetailFloatingABtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoesListTitleTV">

            <LinearLayout
                android:id="@+id/shoesListItemContainerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/inner_item_padding">

                <TextView
                    android:id="@+id/emptyListTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/highlight_subtitle_black"
                    android:text="@string/empty_list_TV_label" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNewShoesDetailFloatingABtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:layout_marginBottom="@dimen/base_layout_margin"
            android:contentDescription="@string/floating_BTN_description"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
